test/parsing/errors/nameLength/longPath.compopts
../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/../nameLength/shortName.chpl
